name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , filepath == 1.4.2
  ghc-options: -optl-fuse-ld=gold -j +RTS -A128m -n2m -RTS
  ld-options:  -fuse-ld=gold
  default-language: Haskell2010
